--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,172 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Etec
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
-  </div>
+<!-- Menu Superior de Cursos -->
+<ion-row>
+  <ion-col size="12">
+
+    <ion-segment value="desenvolvimento_sistemas">
+      <ion-segment-button value="desenvolvimento_sistemas">
+        <ion-label>Desenvolvimento de Sistemas</ion-label>
+      </ion-segment-button>
+
+      <ion-segment-button value="informatica_internet">
+        <ion-label>Informática para Internet</ion-label>
+      </ion-segment-button>
+
+      <ion-segment-button value="quimica">
+        <ion-label>Química</ion-label>
+      </ion-segment-button>
+    </ion-segment>
+
+  </ion-col>
+</ion-row>
+
+<!-- Linha Desenvolvimento de Sistemas -->
+<ion-row>
+  <ion-col size="4">
+    <ion-card>
+      <img alt="" src="https://images.pexels.com/photos/943096/pexels-photo-943096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Mobile</ion-card-title>
+        <ion-card-subtitle>Bootstrap & Ionic</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="" src="https://images.pexels.com/photos/1089440/pexels-photo-1089440.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Mobile</ion-card-title>
+        <ion-card-subtitle>HTML & CSS</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="" src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Mobile</ion-card-title>
+        <ion-card-subtitle>JavaScript & TypeScript</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+
+</ion-row>
+
+<!-- Linha Informática para Internet -->
+<ion-row>
+  <ion-col size="4">
+    <ion-card>
+      <img alt="" src="https://images.pexels.com/photos/270488/pexels-photo-270488.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Web</ion-card-title>
+        <ion-card-subtitle>Bootstrap & Ionic</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="" src="https://images.pexels.com/photos/5380642/pexels-photo-5380642.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Web</ion-card-title>
+        <ion-card-subtitle>HTML & CSS</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="" src="https://images.pexels.com/photos/247791/pexels-photo-247791.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Web</ion-card-title>
+        <ion-card-subtitle>JavaScript & TypeScript</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+
+</ion-row>
+
+<!-- Linha Química -->
+<ion-row>
+  <ion-col size="4">
+    <ion-card>
+      <img alt="" src="https://images.pexels.com/photos/8325710/pexels-photo-8325710.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Átomo</ion-card-title>
+        <ion-card-subtitle>Elétrons & Núcleos</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="" src="https://images.pexels.com/photos/8927674/pexels-photo-8927674.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Átomo</ion-card-title>
+        <ion-card-subtitle>Prótons & Neutrons</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="" src="https://images.pexels.com/photos/8325719/pexels-photo-8325719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Átomo</ion-card-title>
+        <ion-card-subtitle>Eletrosfera & Núcleos</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+
+</ion-row>
 </ion-content>
