--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,10 +9,11 @@
 <ion-content [fullscreen]="true">
 
 <!-- Menu Superior de Cursos -->
+
 <ion-row>
   <ion-col size="12">
 
-    <ion-segment value="desenvolvimento_sistemas">
+    <ion-segment value="desenvolvimento_sistemas" (ionChange)="selecionarCards($event)">
       <ion-segment-button value="desenvolvimento_sistemas">
         <ion-label>Desenvolvimento de Sistemas</ion-label>
       </ion-segment-button>
@@ -30,143 +31,149 @@
 </ion-row>
 
 <!-- Linha Desenvolvimento de Sistemas -->
-<ion-row>
-  <ion-col size="4">
-    <ion-card>
-      <img alt="" src="https://images.pexels.com/photos/943096/pexels-photo-943096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
-      <ion-card-header>
-        <ion-card-title>Programação Mobile</ion-card-title>
-        <ion-card-subtitle>Bootstrap & Ionic</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
+<ng-container *ngIf="this.item_selecionado == 'desenvolvimento_sistemas'">
+  <ion-row>
+    <ion-col size="4">
+      <ion-card>
+        <img alt="" src="https://images.pexels.com/photos/943096/pexels-photo-943096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <ion-card-header>
+          <ion-card-title>Programação Mobile</ion-card-title>
+          <ion-card-subtitle>Bootstrap & Ionic</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
 
-  <ion-col size="4">
-    <ion-card>
-      <img alt="" src="https://images.pexels.com/photos/1089440/pexels-photo-1089440.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
-      <ion-card-header>
-        <ion-card-title>Programação Mobile</ion-card-title>
-        <ion-card-subtitle>HTML & CSS</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
+    <ion-col size="4">
+      <ion-card>
+        <img alt="" src="https://images.pexels.com/photos/1089440/pexels-photo-1089440.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <ion-card-header>
+          <ion-card-title>Programação Mobile</ion-card-title>
+          <ion-card-subtitle>HTML & CSS</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
 
-  <ion-col size="4">
-    <ion-card>
-      <img alt="" src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
-      <ion-card-header>
-        <ion-card-title>Programação Mobile</ion-card-title>
-        <ion-card-subtitle>JavaScript & TypeScript</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
+    <ion-col size="4">
+      <ion-card>
+        <img alt="" src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <ion-card-header>
+          <ion-card-title>Programação Mobile</ion-card-title>
+          <ion-card-subtitle>JavaScript & TypeScript</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
 
 
-</ion-row>
+  </ion-row>
+</ng-container>
 
 <!-- Linha Informática para Internet -->
-<ion-row>
-  <ion-col size="4">
-    <ion-card>
-      <img alt="" src="https://images.pexels.com/photos/270488/pexels-photo-270488.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
-      <ion-card-header>
-        <ion-card-title>Programação Web</ion-card-title>
-        <ion-card-subtitle>Bootstrap & Ionic</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
+<ng-container *ngIf="this.item_selecionado == 'informatica_internet'">
+  <ion-row>
+    <ion-col size="4">
+      <ion-card>
+        <img alt="" src="https://images.pexels.com/photos/270488/pexels-photo-270488.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <ion-card-header>
+          <ion-card-title>Programação Web</ion-card-title>
+          <ion-card-subtitle>Bootstrap & Ionic</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
 
-  <ion-col size="4">
-    <ion-card>
-      <img alt="" src="https://images.pexels.com/photos/5380642/pexels-photo-5380642.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
-      <ion-card-header>
-        <ion-card-title>Programação Web</ion-card-title>
-        <ion-card-subtitle>HTML & CSS</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
+    <ion-col size="4">
+      <ion-card>
+        <img alt="" src="https://images.pexels.com/photos/5380642/pexels-photo-5380642.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <ion-card-header>
+          <ion-card-title>Programação Web</ion-card-title>
+          <ion-card-subtitle>HTML & CSS</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
 
-  <ion-col size="4">
-    <ion-card>
-      <img alt="" src="https://images.pexels.com/photos/247791/pexels-photo-247791.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
-      <ion-card-header>
-        <ion-card-title>Programação Web</ion-card-title>
-        <ion-card-subtitle>JavaScript & TypeScript</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
+    <ion-col size="4">
+      <ion-card>
+        <img alt="" src="https://images.pexels.com/photos/247791/pexels-photo-247791.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <ion-card-header>
+          <ion-card-title>Programação Web</ion-card-title>
+          <ion-card-subtitle>JavaScript & TypeScript</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
 
 
-</ion-row>
+  </ion-row>
+</ng-container>
 
 <!-- Linha Química -->
-<ion-row>
-  <ion-col size="4">
-    <ion-card>
-      <img alt="" src="https://images.pexels.com/photos/8325710/pexels-photo-8325710.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
-      <ion-card-header>
-        <ion-card-title>Átomo</ion-card-title>
-        <ion-card-subtitle>Elétrons & Núcleos</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
+<ng-container *ngIf="this.item_selecionado == 'quimica'">
+  <ion-row>
+    <ion-col size="4">
+      <ion-card>
+        <img alt="" src="https://images.pexels.com/photos/8325710/pexels-photo-8325710.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <ion-card-header>
+          <ion-card-title>Átomo</ion-card-title>
+          <ion-card-subtitle>Elétrons & Núcleos</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
 
-  <ion-col size="4">
-    <ion-card>
-      <img alt="" src="https://images.pexels.com/photos/8927674/pexels-photo-8927674.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
-      <ion-card-header>
-        <ion-card-title>Átomo</ion-card-title>
-        <ion-card-subtitle>Prótons & Neutrons</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
+    <ion-col size="4">
+      <ion-card>
+        <img alt="" src="https://images.pexels.com/photos/8927674/pexels-photo-8927674.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <ion-card-header>
+          <ion-card-title>Átomo</ion-card-title>
+          <ion-card-subtitle>Prótons & Neutrons</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
 
-  <ion-col size="4">
-    <ion-card>
-      <img alt="" src="https://images.pexels.com/photos/8325719/pexels-photo-8325719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
-      <ion-card-header>
-        <ion-card-title>Átomo</ion-card-title>
-        <ion-card-subtitle>Eletrosfera & Núcleos</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
+    <ion-col size="4">
+      <ion-card>
+        <img alt="" src="https://images.pexels.com/photos/8325719/pexels-photo-8325719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <ion-card-header>
+          <ion-card-title>Átomo</ion-card-title>
+          <ion-card-subtitle>Eletrosfera & Núcleos</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
 
 
-</ion-row>
+  </ion-row>
+</ng-container>
 </ion-content>
