--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,34 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
-  </div>
+  <ion-row class="ion-justify-content-center">
+    <ion-col size="10" size-lg="8" class="ion-text-center">
+      <ion-row>
+        <ion-col size="4">
+          <img src="">
+        </ion-col>
+  
+        <ion-col size="8">
+          <ion-row>
+            <ion-col size="12">
+              <ion-label>{{ perfil.nome }}</ion-label>
+            </ion-col>
+          </ion-row>
+  
+          <ion-row>
+            <ion-col size="12">
+              <ion-label>{{ perfil.profissao }}</ion-label>
+            </ion-col>
+          </ion-row>
+  
+          <ion-row>
+            <ion-col size="6">
+              <ion-button expand="full" shape="round" color="primary">Seguir</ion-button>
+            </ion-col>
+            <ion-col size="6">
+              <ion-button expand="full" shape="round" color="secondary">Mensagem</ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-col>
+  </ion-row>
 </ion-content>
