--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,8 @@
 <ion-content [fullscreen]="true">
   <ion-row class="ion-justify-content-center">
     <ion-col size="10" size-lg="8" class="ion-text-center">
+
+      <!-- Cabeçalho -->
       <ion-row>
         <ion-col size="4">
           <img src="">
@@ -27,6 +29,57 @@
               <ion-button expand="full" shape="round" color="secondary">Mensagem</ion-button>
             </ion-col>
           </ion-row>
+        </ion-col>
+      </ion-row>
+
+      <!-- Métricas Sociais -->
+      <ion-row>
+        <ion-col size="4">
+
+          <ion-row>
+            <ion-col size="12" class="ion-text-center">
+              <ion-label>{{ metricas_sociais.curtidas }}</ion-label>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="12" class="ion-text-center">
+              <ion-label>Curtidas</ion-label>
+            </ion-col>
+          </ion-row>
+
+        </ion-col>
+
+        <ion-col size="4">
+          
+          <ion-row>
+            <ion-col size="12" class="ion-text-center">
+              <ion-label>{{ metricas_sociais.seguidores }}</ion-label>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="12" class="ion-text-center">
+              <ion-label>Seguindo</ion-label>
+            </ion-col>
+          </ion-row>
+
+        </ion-col>
+
+        <ion-col size="4">
+          
+          <ion-row>
+            <ion-col size="12" class="ion-text-center">
+              <ion-label>{{ metricas_sociais.amigos }}</ion-label>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size="12" class="ion-text-center">
+              <ion-label>Amigos</ion-label>
+            </ion-col>
+          </ion-row>
+
         </ion-col>
       </ion-row>
     </ion-col>
