--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -82,6 +82,34 @@
 
         </ion-col>
       </ion-row>
+
+      <!--  Linha de divisão -->
+      <ion-row>
+        <ion-col size="12">
+          <ion-item-divider></ion-item-divider>
+        </ion-col>
+      </ion-row>
+
+      <!-- Sobre -->
+      <ion-row>
+        <ion-col size="12">Sobre</ion-col>
+        <ion-col size="12">{{ perfil.biografia }}</ion-col>
+      </ion-row>
+
+      <!--  Linha de divisão -->
+      <ion-row>
+        <ion-col size="12">
+          <ion-item-divider></ion-item-divider>
+        </ion-col>
+      </ion-row>
+
+      <!-- Postagens -->
+      <ion-row>
+        
+      </ion-row>
+
+
+
     </ion-col>
   </ion-row>
 </ion-content>
