--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,10 +23,10 @@
   
           <ion-row>
             <ion-col size="6">
-              <ion-button expand="full" shape="round" color="primary">Seguir</ion-button>
+              <ion-button expand="full" shape="round" color="primary" (click)="this.setSeguir()">{{ this.Seguir_Status }}</ion-button>
             </ion-col>
             <ion-col size="6">
-              <ion-button expand="full" shape="round" color="secondary">Mensagem</ion-button>
+              <ion-button expand="full" shape="round" color="secondary" routerLink="/mensagem">Mensagem</ion-button>
             </ion-col>
           </ion-row>
         </ion-col>
