--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,15 +6,17 @@
 
   <div class="Botoes">
     <h1 id="Valor">20</h1>
+
+    <h1 id="Historico">Histórico:</h1>
     <ion-row class="Primeira_linha">
-      <ion-col size="3" class="Operacao">
+      <ion-col size="3" id="C" class="Operacao">
         C
       </ion-col>
       <ion-col size="3" class="Operacao">
         %
       </ion-col>
       <ion-col size="3" class="Operacao">
-        /
+        ÷
       </ion-col>
       <ion-col size="3" class="Operacao">
         X
