--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,7 +6,7 @@
 }
 
 .Visor{
-  height: 32vh;
+  height: 30vh;
   font-size: 2em;
   text-align: center;
 }
@@ -14,6 +14,7 @@
 .Visor h1{
   margin-top: 20px;
   font-family: 'Nunito', sans-serif;
+  color: #FFF;
 }
 
 #Valor{
@@ -27,7 +28,7 @@
 }
 
 .Botoes{
-  height: 68vh;
+  height: 70vh;
   text-align: center;
   color: #ff3764;
 }
