--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
         C
       </ion-col>
       <ion-col size="3" class="Operacao">
-        +/-
+        %
       </ion-col>
       <ion-col size="3" class="Operacao">
         ÷
@@ -81,7 +81,11 @@
         .
       </ion-col>
 
-      <ion-col size="6" class="Igual">
+      <ion-col size="3" class="Operacao">
+        +/-
+      </ion-col>
+
+      <ion-col size="3" class="Igual">
         =
       </ion-col>
     </ion-row>
