--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -42,6 +42,7 @@
   font-size: 2em;
   background: #3b3f5d;
   border: 2px solid #333a58;
+  border-radius: 20px;
 }
 
 .Num:hover, .Num:active{
@@ -59,6 +60,7 @@
   font-size: 2em;
   background: #4e566e;
   border: 2px solid #333a58;
+  border-radius: 20px;
 }
 
 .Operacao:hover, .Operacao:active{
@@ -73,6 +75,7 @@
   background: #ff3764;
   color: #FFF;
   border: 2px solid #333a58;
+  border-radius: 20px;
 }
 
 .Igual:hover{
