--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,14 +26,13 @@
 
     
     <ion-row class="Segunda_linha">
-      <ion-col size="3" class="Num" >
-        <ion-button (click)="this.addNum()">7</ion-button>
-
+      <ion-col size="3" class="Num" (click)="this.addNum('7')">
+        7
       </ion-col>
-      <ion-col size="3" class="Num">
+      <ion-col size="3" class="Num" (click)="this.addNum('8')">
         8
       </ion-col>
-      <ion-col size="3" class="Num">
+      <ion-col size="3" class="Num" (click)="this.addNum('9')">
         9
       </ion-col>
       <ion-col size="3" class="Operacao">
@@ -43,13 +42,13 @@
 
       
     <ion-row class="Terceira_linha">
-      <ion-col size="3" class="Num">
+      <ion-col size="3" class="Num" (click)="this.addNum('4')">
         4
       </ion-col>
-      <ion-col size="3" class="Num">
+      <ion-col size="3" class="Num" (click)="this.addNum('5')">
         5
       </ion-col>
-      <ion-col size="3" class="Num">
+      <ion-col size="3" class="Num" (click)="this.addNum('6')">
         6
       </ion-col>
       <ion-col size="3" class="Operacao">
@@ -59,16 +58,16 @@
 
     
     <ion-row class="Quarta_linha">
-      <ion-col size="3" class="Num">
+      <ion-col size="3" class="Num" (click)="this.addNum('1')">
         1
       </ion-col>
-      <ion-col size="3" class="Num">
+      <ion-col size="3" class="Num" (click)="this.addNum('2')">
         2
       </ion-col>
-      <ion-col size="3" class="Num">
+      <ion-col size="3" class="Num" (click)="this.addNum('3')">
         3
       </ion-col>
-      <ion-col size="3" class="Operacao">
+      <ion-col size="3" class="Operacao" (click)="this.clear()">
         <ion-icon size="3" name="backspace-outline"></ion-icon>
       </ion-col>
     </ion-row>
