--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -79,7 +79,7 @@
       <ion-col size="3" class="Num" (click)="this.addNum('0')">
         0
       </ion-col>
-      <ion-col size="3" class="Num">
+      <ion-col size="3" class="Num" (click)="this.addNum('.')">
         .
       </ion-col>
 
@@ -92,5 +92,4 @@
       </ion-col>
     </ion-row>
   </div>
-
 </ion-content>
